perf[stream]: stream.toList() replaces collect(Collectors.toList())