@@ -16,7 +16,6 @@ import com.zfoo.protocol.collection.CollectionUtils;
 import com.zfoo.protocol.util.StringUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * @author godotg
@@ -70,7 +69,7 @@ public class HostAndPort {
     public static String toHostAndPortListStr(Collection<HostAndPort> list) {
         var urlList = list.stream()
                 .map(it -> it.toHostAndPortStr())
-                .collect(Collectors.toList());
+                .toList();;
         return StringUtils.joinWith(StringUtils.COMMA, urlList.toArray());
     }
 
