@@ -24,7 +24,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.mongodb.client.model.Filters.eq;
 import static com.mongodb.client.model.Filters.in;
@@ -92,7 +91,7 @@ public class MongodbAccessor implements IAccessor {
 
             var batchList = entities.stream()
                     .map(it -> new ReplaceOneModel<E>(Filters.eq("_id", it.id()), it))
-                    .collect(Collectors.toList());
+                    .toList();
 
             var result = collection.bulkWrite(batchList, new BulkWriteOptions().ordered(false));
             if (result.getModifiedCount() != entities.size()) {
@@ -128,7 +127,7 @@ public class MongodbAccessor implements IAccessor {
         @SuppressWarnings("unchecked")
         var entityClazz = (Class<E>) entities.get(0).getClass();
         var collection = OrmContext.getOrmManager().getCollection(entityClazz);
-        var ids = entities.stream().map(it -> (it).id()).collect(Collectors.toList());
+        var ids = entities.stream().map(it -> (it).id()).toList();;
         collection.deleteMany(in("_id", ids));
     }
 
