@@ -39,7 +39,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.zfoo.protocol.util.FileUtils.LS;
 import static com.zfoo.protocol.util.StringUtils.TAB;
@@ -211,7 +210,7 @@ public abstract class GenerateCppUtils {
         // ValueOf()方法
         var valueOfParams = filedList.stream()
                 .map(it -> StringUtils.format("{} {}", it.getKey(), it.getValue()))
-                .collect(Collectors.toList());
+                .toList();;
         var valueOfParamsStr = StringUtils.joinWith(StringUtils.COMMA + " ", valueOfParams.toArray());
 
         var cppBuilder = new StringBuilder();
